[package]
name = "ccLynx"
version = "0.1.0"
edition = "2024"
authors = ["LLeny"]
license = "GPL-3.0-or-later"
description = "a subset of C compiler for Atari Lynx"
readme = "README.md"
homepage = "https://github.com/LLeny/ccLynx"
repository = "https://github.com/LLeny/ccLynx"
keywords = ["cli", "atari", "lynx", "compiler", "gamedev"]
categories = ["command-line-utilities", "game-development", "compilers"]

[dependencies]
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["derive"] }
regex = "1"
cc6502 = { git = "https://github.com/LLeny/cc6502.git", branch = "Lynx", features = [
  "atarilynx",
] }

[profile.release]
codegen-units = 1
lto = "fat"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
